--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
     </div>
 
     <div id="tab3" class="resumeCard">
-        <iframe title='Resume' src='./img/resume1.pdf' width="100%" height="750px" style="margin: auto">
+        <iframe title='Resume' src='./img/resume1.pdf' width="100%" height="750px" style="margin: auto;"
+            id="resumeframe">
         </iframe>
     </div>
 
@@ -249,13 +250,17 @@
         <h1 class="">Contact</h1>
         <hr>
         </hr>
-        <div>
-            <form class="contactForm" onSubmit={this.sendEmail}>
-                <p><input class="contactInput" type="text" placeholder="Name" required name="name"></input></p>
-                <p><input class="contactInput" type="text" placeholder="Email" required name="email"></input></p>
-                <p><input class="contactInput" type="text" placeholder="Company" required name="company"></input>
+        <div id="contact-div">
+            <form class="contactForm" id="contact-form">
+                <p><input class="contactInput" id="name" type="text" placeholder="Name" required name="name"></input>
                 </p>
-                <textarea class="contactInput" name="message" type="textarea" placeholder="Message"></textarea>
+                <p><input class="contactInput" id="email" type="text" placeholder="Email" required name="email"></input>
+                </p>
+                <p><input class="contactInput" id="company" type="text" placeholder="Company" required
+                        name="company"></input>
+                </p>
+                <textarea class="contactInput" id="message" name="message" type="textarea"
+                    placeholder="Message"></textarea>
                 <p><input class="contactSubmit" type="submit" value="Submit" /></p>
             </form>
         </div>
@@ -265,6 +270,33 @@
         <p>&copy; 2023 Nate Carlson</p>
     </footer>
     <script src="script.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init('AxNy4nzCU6XXWzZXc');
+        })();
+        window.onload = function () {
+            document.getElementById('contact-form').addEventListener('submit', function (event) {
+                event.preventDefault();
+                let params = {
+                    name: document.getElementById("name").value,
+                    email: document.getElementById("email").value,
+                    company: document.getElementById("company").value,
+                    message: document.getElementById("message").value
+                }
+                // these IDs from the previous steps
+                emailjs.sendForm('service_xqm5e8f', 'template_0ns5dui', this)
+                    .then(function () {
+                        console.log('SUCCESS!');
+                    }, function (error) {
+                        console.log('FAILED...', error);
+                    });
+
+                let form = document.getElementById('contact-div');
+                form.innerHTML = '<div class="form-submit"><h1>Message Sent Successfully,<br/> you will hear back ASAP!</h1></div>';
+            });
+        }
+    </script>
 </body>
 
 </html>
