--- a/index.html
+++ b/index.html
@@ -139,24 +139,39 @@
         </div>
     </div>
 
-    <div id="tab2" class="flex-container projectsCard">
+    <div id="tab2" class="flex-container projectsCard" style="align-items: self-start;">
         <div class="project0 flex-item">
-            <h2>League of Legends Pro Builds</h2>
+            <h2>AniviaGods.net</h2>
             <div class="btn-container">
-                <input class="disabled-button" type="button" value="Website"></input>
+                <a href="http://www.aniviagods.net" target="_blank"><input type="button" value="Website"></input></a>
                 <input class="disabled-button" type="button" value="Code"></input>
             </div>
             <hr>
             </hr>
-            <p class="languages">ReactJS / MongoDB / CSS</p>
+            <p class="languages">JavaScript / MongoDB / NodeJS / CSS</p>
             <hr>
             </hr>
-            <img class="siteCardPic" src='./img/lolprobuilds1.png' alt='website screenshot'></img>
-            <p>An unreleased site which fetches live stats and build patterns for the game League of Legends.</p>
-            <img class="siteCardPic" src='./img/lolprobuilds2.png' alt="website screenshot"></img>
-            <p> This site takes data from the Riot Games API to pull and find the best players on the North American,
-                European, Chinese, and Korean servers. This data is taken and displayed back to the user to show the
-                best item builds, rune pages, and summoner spells for each champion.</p>
+            <img class="siteCardPic" src='./img/aniviagods1.png' alt='website screenshot'></img>
+            <p>Powered by a server that fetches data from the league of legends API in order to find the best strategies
+                for the champion Anivia, and displays these strategies in easily digestable ways.</p>
+            <img class="siteCardPic" src='./img/aniviagods2.png' alt="website screenshot"></img>
+            <p> Fetches data from North American, Korean, and European servers to find strategies from accross the
+                world. Hoping to expand upon this site by adding more functionality such as fully fledged profiles and a
+                tab for matchup specific strategies.</p>
+        </div>
+        <div class="project0 flex-item">
+            <h2>Lady Luck Lounge Website</h2>
+            <div class="btn-container">
+                <input class='disabled-button' type="button" value="Website"></input>
+                <input class='disabled-button' type="button" value="Code"></input>
+            </div>
+            <hr>
+            </hr>
+            <p class="languages">HTML / CSS / JavaScript</p>
+            <hr>
+            </hr>
+            <img class="siteCardPic" src='./img/ladyluckbanner.png' alt='website screenshot'></img>
+            <p>I created and maintained the landing page for the bar that I was bartending at in college.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Oldschool Runescape Skill Calculator</h2>
@@ -176,20 +191,6 @@
             <img class="siteCardPic" src='./img/osrs-site2.png' alt='website screenshot'></img>
             <p>Other features such as registering with the site and saving multiple usernames to a list for all of your
                 accounts so that they are more easily accesible.</p>
-        </div>
-        <div class="project0 flex-item">
-            <h2>Lady Luck Lounge Website</h2>
-            <div class="btn-container">
-                <input class='disabled-button' type="button" value="Website"></input>
-                <input class='disabled-button' type="button" value="Code"></input>
-            </div>
-            <hr>
-            </hr>
-            <p class="languages">HTML / CSS / JavaScript</p>
-            <hr>
-            </hr>
-            <img class="siteCardPic" src='./img/ladyluckbanner.png' alt='website screenshot'></img>
-            <p>I created and maintained the landing page for the bar that I was bartending at in college.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Nate's Cocktail HQ</h2>
