--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nate Carlson</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -152,12 +153,31 @@
             <hr>
             </hr>
             <img class="siteCardPic" src='./img/aniviagods1.png' alt='website screenshot'></img>
-            <p>Powered by a server that fetches data from the league of legends API in order to find the best strategies
+            <p>Powered by a node server that fetches data from the league of legends API in order to find the best
+                strategies
                 for the champion Anivia, and displays these strategies in easily digestable ways.</p>
             <img class="siteCardPic" src='./img/aniviagods2.png' alt="website screenshot"></img>
             <p> Fetches data from North American, Korean, and European servers to find strategies from accross the
                 world. Hoping to expand upon this site by adding more functionality such as fully fledged profiles and a
                 tab for matchup specific strategies.</p>
+        </div>
+        <div class="project0 flex-item">
+            <h2>Nate's 3D Builder</h2>
+            <div class="btn-container">
+                <a href="https://www.natecarlson.org/3dworld" target="_blank"><input type="button"
+                        value="Website"></input></a>
+                <input class="disabled-button" type="button" value="Code"></input>
+            </div>
+            <hr>
+            </hr>
+            <p class="languages">JavaScript / HTML / CSS</p>
+            <hr>
+            </hr>
+            <img class="siteCardPic" src='./img/nate3js.png' alt='website screenshot'></img>
+            <p>An environment which uses the 3JS library to display and move around 3D objects in a 3D environment.
+                Using microsoft blob storage to store these models, I can upload and place any 3D object I'd like to
+                this world. Would like to add some functionalities such as user-uploaded models and more options to
+                change the environment plane which is currently just a concrete slab.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Lady Luck Lounge Website</h2>
@@ -171,7 +191,7 @@
             <hr>
             </hr>
             <img class="siteCardPic" src='./img/ladyluckbanner.png' alt='website screenshot'></img>
-            <p>I created and maintained the landing page for the bar that I was bartending at in college.</p>
+            <p>Created and maintained landing page for the bar I bartended at through college.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Oldschool Runescape Skill Calculator</h2>
@@ -204,7 +224,6 @@
             <hr>
             </hr>
             <img class="siteCardPic" src='./img/nates-cocktails.png' alt='website screenshot'></img>
-            <p>Site used to track the cocktails I enjoyed and discovered while bartending.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Calories / Protein Tracker</h2>
@@ -241,7 +260,7 @@
         </div>
     </div>
 
-    <div id="tab3" class="resumeCard">
+    <div id="tab3" style="margin-top: 30px; margin-bottom: 30px; padding: 10px;">
         <iframe title='Resume' src='./img/resume1.pdf' width="100%" height="750px" style="margin: auto;"
             id="resumeframe">
         </iframe>
@@ -268,7 +287,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Nate Carlson</p>
+        <p>&copy; 2024 Nate Carlson</p>
     </footer>
     <script src="script.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
