--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="project0 flex-item">
             <h2>Lady Luck Lounge Website</h2>
             <div class="btn-container">
-                <a href="https://www.natecarlson.org/ladyluck/index.html" target="_blank"><input type="button"
+                <a href="https://www.natecarlson.org/ladyluck" target="_blank"><input type="button"
                         value="Website"></input></a>
                 <input class='disabled-button' type="button" value="Code"></input>
             </div>
