--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                         Projects
                     </li>
                 </a>
-                <a class="nav-link" onClick="tab3()">
+                <!-- <a class="nav-link" onClick="tab3()">
                     <li id="resume-nav" class="nav-item">
                         Resume
                     </li>
-                </a>
+                </a> -->
                 <a class="nav-link" onClick="tab4()">
                     <li id="contact-nav" class="nav-item">
                         Contact
@@ -261,11 +261,11 @@
         </div>
     </div>
 
-    <div id="tab3" style="margin-top: 30px; margin-bottom: 30px; padding: 10px;">
+    <!-- <div id="tab3" style="margin-top: 30px; margin-bottom: 30px; padding: 10px;">
         <iframe title='Resume' src='./img/resume1.pdf' width="100%" height="750px" style="margin: auto;"
             id="resumeframe">
         </iframe>
-    </div>
+    </div> -->
 
     <div id="tab4" class="contactCard">
         <h1 class="">Contact</h1>
