--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                         Projects
                     </li>
                 </a>
-                <a class="nav-link" onClick="tab3()">
+                <!-- <a class="nav-link" onClick="tab3()">
                     <li id="resume-nav" class="nav-item">
                         Resume
                     </li>
-                </a>
+                </a> -->
                 <a class="nav-link" onClick="tab4()">
                     <li id="contact-nav" class="nav-item">
                         Contact
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <div id="tab2" class="flex-container projectsCard" style="align-items: self-start;">
+    <div id="tab2" class="flex-container projectsCard" style="align-items: normal;">
         <div class="project0 flex-item">
             <h2>Anivia Gods (League of Legends)</h2>
             <div class="btn-container">
@@ -162,39 +162,6 @@
                 tab for matchup specific strategies.</p>
         </div>
         <div class="project0 flex-item">
-            <h2>Nate's 3D Builder</h2>
-            <div class="btn-container">
-                <a href="https://www.natecarlson.org/3dworld" target="_blank"><input type="button"
-                        value="Website"></input></a>
-                <input class="disabled-button" type="button" value="Code"></input>
-            </div>
-            <hr>
-            </hr>
-            <p class="languages">JavaScript / HTML / CSS</p>
-            <hr>
-            </hr>
-            <img class="siteCardPic" src='./img/nate3js.png' alt='website screenshot'></img>
-            <p>An environment which uses the 3JS library to display and move around 3D objects in a 3D environment.
-                Using microsoft blob storage to store these models, I can upload and place any 3D object I'd like to
-                this world. Would like to add some functionalities such as user-uploaded models and more options to
-                change the environment plane which is currently just a concrete slab.</p>
-        </div>
-        <div class="project0 flex-item">
-            <h2>Lady Luck Lounge Website</h2>
-            <div class="btn-container">
-                <a href="https://www.natecarlson.org/ladyluck" target="_blank"><input type="button"
-                        value="Website"></input></a>
-                <input class='disabled-button' type="button" value="Code"></input>
-            </div>
-            <hr>
-            </hr>
-            <p class="languages">HTML / CSS / JavaScript</p>
-            <hr>
-            </hr>
-            <img class="siteCardPic" src='./img/ladyluckbanner.png' alt='website screenshot'></img>
-            <p>Created and maintained landing page for the bar I bartended at through college.</p>
-        </div>
-        <div class="project0 flex-item">
             <h2>Oldschool Runescape Skill Calculator</h2>
             <div class="btn-container">
                 <input class="disabled-button" type="button" value="Website"></input>
@@ -212,6 +179,39 @@
             <img class="siteCardPic" src='./img/osrs-site2.png' alt='website screenshot'></img>
             <p>Other features such as registering with the site and saving multiple usernames to a list for all of your
                 accounts so that they are more easily accesible.</p>
+        </div>
+        <div class="project0 flex-item">
+            <h2>Lady Luck Lounge Website</h2>
+            <div class="btn-container">
+                <a href="https://www.natecarlson.org/ladyluck" target="_blank"><input type="button"
+                        value="Website"></input></a>
+                <input class='disabled-button' type="button" value="Code"></input>
+            </div>
+            <hr>
+            </hr>
+            <p class="languages">HTML / CSS / JavaScript</p>
+            <hr>
+            </hr>
+            <img class="siteCardPic" src='./img/ladyluckbanner.png' alt='website screenshot'></img>
+            <p>Created and maintained landing page for the bar I bartended at through college.</p>
+        </div>
+        <div class="project0 flex-item">
+            <h2>Nate's 3D Builder</h2>
+            <div class="btn-container">
+                <a href="https://www.natecarlson.org/3dworld" target="_blank"><input type="button"
+                        value="Website"></input></a>
+                <input class="disabled-button" type="button" value="Code"></input>
+            </div>
+            <hr>
+            </hr>
+            <p class="languages">JavaScript / HTML / CSS</p>
+            <hr>
+            </hr>
+            <img class="siteCardPic" src='./img/nate3js.png' alt='website screenshot'></img>
+            <p>An environment which uses the 3JS library to display and move around 3D objects in a 3D environment.
+                Using microsoft blob storage to store these models, I can upload and place any 3D object I'd like to
+                this world. Would like to add some functionalities such as user-uploaded models and more options to
+                change the environment plane which is currently just a concrete slab.</p>
         </div>
         <div class="project0 flex-item">
             <h2>Nate's Cocktail HQ</h2>
@@ -261,11 +261,11 @@
         </div>
     </div>
 
-    <div id="tab3" style="margin-top: 30px; margin-bottom: 30px; padding: 10px;">
+    <!-- <div id="tab3" style="margin-top: 30px; margin-bottom: 30px; padding: 10px;">
         <iframe title='Resume' src='./img/resume1.pdf' width="100%" height="750px" style="margin: auto;"
             id="resumeframe">
         </iframe>
-    </div>
+    </div> -->
 
     <div id="tab4" class="contactCard">
         <h1 class="">Contact</h1>
