--- a/beatpad/index.html
+++ b/beatpad/index.html
@@ -33,6 +33,7 @@
                 <h3>Available Sounds</h3>
                 <ul id="all-sounds-list"></ul>
             </div>
+            <div>1</div>
 
         </div>
     </div>
